part1/1.10/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes: # pod-level: the shared volume
        - name: shared-log
          emptyDir: {}
      containers:
        - name: writer
          image: tripplen63/log-output:1.10
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
        - name: reader
          image: tripplen63/log-output:1.10
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
